--- a/src/components/HomeList/style.css
+++ b/src/components/HomeList/style.css
@@ -5,6 +5,7 @@
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: relative;
+  text-align: center;
 }
 
 .homeList .title {
