--- a/src/components/NftInfo/style.css
+++ b/src/components/NftInfo/style.css
@@ -31,3 +31,9 @@
   padding-inline: 1.25rem;
   font-family: 'Rufina';
 }
+
+@media screen and (max-width: 768px) {
+  .nftInfo {
+    width: unset !important;
+  }
+}
