--- a/src/components/HomeInfo/style.css
+++ b/src/components/HomeInfo/style.css
@@ -1,3 +1,10 @@
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 .homeInfo {
   display: flex;
   flex-direction: row;
@@ -5,8 +12,7 @@
   padding: 1rem;
   font-size: 0.875rem; /* 14px */
   background: rgba(0, 0, 0, 0.32);
-  width: max-content;
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 
 .homeInfo section {
